--- a/back/.env
+++ b/back/.env
@@ -1,15 +1,15 @@
 TAX_API="https://mspd-api.soliq.uz/xdduk-api/xdduk-api/involved-businessman"
 #TAX_API="https://soliq.uz"
-BASE_URL="http://10.190.66.242:8000"
-#BASE_URL="http://192.168.1.106:8000"
+#BASE_URL="http://10.190.66.242:8000"
+BASE_URL="http://192.168.1.13:8000"
 
 # postgresql's envs
 DB_NAME="xdb"
 DB_USER="db_user"
-DB_PASSWORD="Pass@123"
-#DB_PASSWORD="password"
-DB_HOST="10.190.66.242"
-#DB_HOST="192.168.1.106"
+#DB_PASSWORD="Pass@123"
+DB_PASSWORD="password"
+#DB_HOST="10.190.66.242"
+DB_HOST="192.168.1.13"
 DB_PORT="5432"
 
 # jwt envs
