--- a/back/.env
+++ b/back/.env
@@ -1,16 +1,11 @@
-#TAX_API="https://mspd-api.soliq.uz"
-TAX_API="https://soliq.uz"
-BASE_URL="http://localhost:8000"
-#BASE_URL="http://192.168.230.129:8000"
+TAX_API="https://mspd-api.soliq.uz"
+BASE_URL="http://192.168.230.129:8000"
 
 # postgresql's envs
-DB_NAME="xdb"
+DB_NAME="xdb2"
 DB_USER="db_user"
-#DB_PASSWORD="Pass@123"
-DB_PASSWORD="password"
-#DB_HOST="10.3.1.150"
-#DB_HOST="192.168.1.106"
-DB_HOST="localhost"
+DB_PASSWORD="Pass@123"
+DB_HOST="192.168.230.129"
 DB_PORT="5432"
 
 # jwt envs
